--- a/style.css
+++ b/style.css
@@ -5,14 +5,26 @@
 }
 
 html {
-    background: rgba(173, 223, 126, 0.5);
+    background-color: rgba(173, 223, 126, 0.5);
     padding: 5rem;
-    background: url(https://unsplash.com/photos/ViEBSoZH6M4);
+    background-image: url(back.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 #title {
     text-align: center;
     padding-bottom: 1rem;
+    font-size: 3rem;
+    color: rgb(21, 73, 28);
+}
+
+#description {
+    text-align: center;
+    font-family: fantasy;
+    font-size: 1.2rem;
+    color: rgb(55, 100, 70);
 }
 
 form {
